--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>5.2.3</version>
 		</dependency>
+		<dependency>
+		  <groupId>org.projectlombok</groupId>
+		  <artifactId>lombok</artifactId>
+		  <version>1.18.22</version>
+		</dependency>
   	</dependencies>
 	<build>
       <plugins>
